[project]
name = "calculator"
version = "0.1.0"
description = "Python library for tutorial"
authors = [
    {name = "reubendo",email = "dorent@live.fr"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [
    { include = "calculator", from = "src" },
]
requires-python = ">=3.9"
dependencies = [
    "numpy (>=2.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.0"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["calculator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
